--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -152,6 +152,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
+		optional.project "naturalist"
 		incompatible.project "exordium"
 	}
 }
