--- a/content/forgero-compat/src/main/resources/data/forgero/packs/advancednetherite/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/advancednetherite/package.json
@@ -2,7 +2,7 @@
   "name": "advancednetherite-compat",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "ae2",
+  "namespace": "advancednetherite",
   "dependencies": [
     "minecraft",
     "forgero",
