Added tags recipes still broken

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -10,7 +10,8 @@
     ],
     "any": [
       "mythicmetals",
-      "natures_spirit"
+      "natures_spirit",
+      "regions_unexplored"
     ]
   }
 }
