--- a/content/forgero-compat/src/main/resources/data/forgero/packs/modern_industrialization/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/modern_industrialization/package.json
@@ -2,7 +2,7 @@
   "name": "modern_industrialization-compat",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "mythicmetals",
+  "namespace": "modern_industrialization",
   "dependencies": [
     "minecraft",
     "forgero",
