[Feature]: Modonomicon book (#959)
This adds the Artifica. 

Our very own guidebook, explaining the first process, our working
stations and some small stuffabout slots and materials.

---------

Co-authored-by: temyy <tuominen.kristian@gmail.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	// TODO: Switch to Modonomicon
 	modCompileOnly("maven.modrinth:patchouli:${project.patchouli_version}")
 
+	// Modonomicon
+	modImplementation "com.klikli_dev:modonomicon-${minecraft_version}-fabric:${modonomicon_version}"
+
 	// Better Combat
 	modImplementation("maven.modrinth:cloth-config:${project.cloth_config_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
