--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	// Mod Menu
 	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
 
-	// YetAnotherConfigLib
+  // Yacl
 	modImplementation("maven.modrinth:yacl:${project.yacl_version}")
 
 	// Patchouli
