[Compat]: Ecologics compat (#958)
Ecologics compat
small one
only 5 new materials

---------

Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -119,6 +119,7 @@ curseforge {
 				optionalDependency "betternether"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
+				optionalDependency "ecologics"
 				optionalDependency "naturalist"
 				optionalDependency "advanced-netherite"
 				incompatible "exordium"
@@ -153,6 +154,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
+		optional.project "ecologics"
 		optional.project "naturalist"
 		optional.project "advanced-netherite"
 		incompatible.project "exordium"
