[Compat]: Deeper and Darker Compat (#949)
Support for deeper and darker

---------

Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -119,6 +119,7 @@ curseforge {
 				optionalDependency "betternether"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
+				optionalDependency "deeperdarker"
 				optionalDependency "ecologics"
 				optionalDependency "naturalist"
 				optionalDependency "advanced-netherite"
@@ -154,6 +155,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
+		optional.project "deeperdarker"
 		optional.project "ecologics"
 		optional.project "naturalist"
 		optional.project "advanced-netherite"
