[Compat]: BetterEnd compatibility (#957)
All thanks to our new buddy in the Discord.
Balancing is a work in progress but its so big I checked it through
didnt seem anything off. I will probably play with this mod anyway soon
so should be fine

---------

Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -117,6 +117,7 @@ curseforge {
 				optionalDependency "modmenu"
 				optionalDependency "mythicmetals"
 				optionalDependency "betternether"
+				optionalDependency "betterend"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
 				optionalDependency "deeperdarker"
@@ -155,6 +156,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
+		optional.project "betterend"
 		optional.project "deeperdarker"
 		optional.project "ecologics"
 		optional.project "naturalist"
