--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -120,6 +120,7 @@ curseforge {
 				optionalDependency "betterend"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
+				optionalDependency "ad_astra"
 				optionalDependency "deeperdarker"
 				optionalDependency "ecologics"
 				optionalDependency "naturalist"
@@ -156,6 +157,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
+		optional.project "ad_astra"
 		optional.project "betterend"
 		optional.project "deeperdarker"
 		optional.project "ecologics"
