[Compat]: Create compat (#974)
Create compat adds 5 new materials:

    Zinc
    Andesite Alloy
    Brass
    Powdered Obsidian
    Rose Quartz

Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -120,6 +120,7 @@ curseforge {
 				optionalDependency "betterend"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
+				optionalDependency "create"
 				optionalDependency "ad_astra"
 				optionalDependency "deeperdarker"
 				optionalDependency "ecologics"
@@ -157,6 +158,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
+		optional.project "create"
 		optional.project "ad_astra"
 		optional.project "betterend"
 		optional.project "deeperdarker"
