Added StatusEffect handler tests

--- a/fabric/minecraft-common/build.gradle
+++ b/fabric/minecraft-common/build.gradle
@@ -4,9 +4,25 @@
 
 dependencies {
 	// Fabric Loader
-	modCompileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
 }
 
 loom {
 	accessWidenerPath = file("src/main/resources/minecraft-common.accesswidener")
 }
+
+sourceSets {
+	test {
+		compileClasspath += main.compileClasspath
+		runtimeClasspath += main.runtimeClasspath
+	}
+}
+
+test {
+	useJUnitPlatform()
+	maxParallelForks = 32
+	testLogging.events("failed")
+	testLogging.info.events = ["failed", "skipped"]
+}
+
