Let's Do Beachparty name changed.

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -13,7 +13,7 @@
       "natures_spirit",
       "regions_unexplored",
       "biomeswevegone",
-      "letsdobeachparty"
+      "beachparty"
     ]
   }
 }
