[Compat]: Modern Industrialization (#995)
Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -117,6 +117,7 @@ curseforge {
 				optionalDependency "modmenu"
 				optionalDependency "mythicmetals"
 				optionalDependency "betternether"
+				optionalDependency "betterend"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
 				optionalDependency "natures_spirit"
@@ -126,6 +127,7 @@ curseforge {
 				optionalDependency "ecologics"
 				optionalDependency "naturalist"
 				optionalDependency "advanced-netherite"
+				optionalDependency "modern-industrialization"
 				optionalDependency "biomeswevegone"
 				incompatible "exordium"
 			}
@@ -168,6 +170,7 @@ modrinth {
 		optional.project "naturalist"
 		optional.project "advanced-netherite"
 		optional.project "biomeswevegone"
+		optional.project "modern-industrialization"
 		incompatible.project "exordium"
 	}
 }
