--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -10,6 +10,8 @@
     ],
     "any": [
       "mythicmetals",
+      "modern_industrialization",
+      "mythicmetals",
       "natures_spirit",
       "regions_unexplored",
       "biomeswevegone",
