[Compat]: Tech Reborn (#996)
This still throws errors in log because some fixes in #988 are not yet
merged

---------

Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -15,7 +15,8 @@
       "natures_spirit",
       "regions_unexplored",
       "biomeswevegone",
-      "create"
+      "create",
+      "techreborn"
     ]
   }
 }
