[Compat]: Lets Do Blooming Nature (#1003)
Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -130,6 +130,7 @@ curseforge {
 				optionalDependency "modern-industrialization"
 				optionalDependency "biomeswevegone"
 				optionalDependency "techreborn"
+				optionalDependency "lets-do-bloomingnature"
 				incompatible "exordium"
 			}
 		}
@@ -172,6 +173,7 @@ modrinth {
 		optional.project "advanced-netherite"
 		optional.project "biomeswevegone"
 		optional.project "modern-industrialization"
+		optional.project "lets-do-bloomingnature"
 		incompatible.project "exordium"
 	}
 }
