--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -131,7 +131,6 @@ curseforge {
 				optionalDependency "biomeswevegone"
 				optionalDependency "techreborn"
 				optionalDependency "lets-do-bloomingnature"
-				optionalDependency "fruitfulfun"
 				incompatible "exordium"
 			}
 		}
@@ -175,7 +174,7 @@ modrinth {
 		optional.project "biomeswevegone"
 		optional.project "modern-industrialization"
 		optional.project "lets-do-bloomingnature"
-		optional.project "fruitfulfun"
+		optional.project "fruitful-fun"
 		incompatible.project "exordium"
 	}
 }
