[Compat]. Fruitful Fun (#1004)
Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -174,6 +174,7 @@ modrinth {
 		optional.project "biomeswevegone"
 		optional.project "modern-industrialization"
 		optional.project "lets-do-bloomingnature"
+		optional.project "fruitful-fun"
 		incompatible.project "exordium"
 	}
 }
