[Compat]: Lets Do Beach Party (#1007)
Co-authored-by: Apocip0 <apostolciprian1000@gmail.com>
Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -10,11 +10,11 @@
     ],
     "any": [
       "mythicmetals",
-      "modern_industrialization",
-      "mythicmetals",
       "natures_spirit",
       "regions_unexplored",
       "biomeswevegone",
+      "beachparty",
+      "modern_industrialization",
       "create",
       "techreborn"
     ]
