[Compat]: Gardens of the Dead (#1015)
Co-authored-by: Apocip0 <162804081+Apocip0@users.noreply.github.com>
Co-authored-by: sigmund <sigmundsgranaas@gmail.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -133,6 +133,7 @@ curseforge {
 				optionalDependency "lets-do-bloomingnature"
 				optionalDependency "lets-do-beachparty"
 				optionalDependency "lets-do-vinery"
+				optionalDependency "gardens-of-the-dead"
 				incompatible "exordium"
 			}
 		}
@@ -179,6 +180,7 @@ modrinth {
 		optional.project "fruitful-fun"
 		optional.project "lets-do-beachparty"
 		optional.project "lets-do-vinery"
+		optional.project "gardens-of-the-dead"
 		incompatible.project "exordium"
 	}
 }
