[Compat]: Create Garnished Additions Compatibility (#1032)
(Another addon to Garnished.) (#999)

- Three materials added. That's it.
- Optional Dependency added.

METAL:
- Nutium Ingot

SOFT_PLANT:
- Ethereal Roots

WOOD:
- Ethereal

Co-authored-by: Apocip0 <162804081+Apocip0@users.noreply.github.com>

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -136,6 +136,7 @@ curseforge {
 				optionalDependency "gardens-of-the-dead"
 				optionalDependency "ribbits"
 				optionalDependency "dragonloot"
+				optionalDependency "garnished-additions"
 				incompatible "exordium"
 			}
 		}
@@ -185,6 +186,7 @@ modrinth {
 		optional.project "gardens-of-the-dead"
 		optional.project "ribbits"
 		optional.project "dragonloot"
+		optional.project "garnished-additions"
 		incompatible.project "exordium"
 	}
 }
