--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -133,6 +133,7 @@ curseforge {
 				optionalDependency "lets-do-bloomingnature"
 				optionalDependency "lets-do-beachparty"
 				optionalDependency "lets-do-vinery"
+				optionalDependency "lets-do-nethervinery"
 				optionalDependency "gardens-of-the-dead"
 				optionalDependency "ribbits"
 				optionalDependency "dragonloot"
@@ -182,6 +183,7 @@ modrinth {
 		optional.project "lets-do-bloomingnature"
 		optional.project "fruitful-fun"
 		optional.project "lets-do-beachparty"
+		optional.project "lets-do-nethervinery"
 		optional.project "lets-do-vinery"
 		optional.project "gardens-of-the-dead"
 		optional.project "ribbits"
