* Corrected ad astra slug

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -122,7 +122,7 @@ curseforge {
 				optionalDependency "mythicmetals"
 				optionalDependency "natures_spirit"
 				optionalDependency "create"
-				optionalDependency "ad_astra"
+				optionalDependency "ad-astra"
 				optionalDependency "deeperdarker"
 				optionalDependency "ecologics"
 				optionalDependency "naturalist"
@@ -173,7 +173,7 @@ modrinth {
 		optional.project "wiredredstone"
 		optional.project "natures_spirit"
 		optional.project "create"
-		optional.project "ad_astra"
+		optional.project "ad-astra"
 		optional.project "betterend"
 		optional.project "deeperdarker"
 		optional.project "ecologics"
