* Corrected the rest of the slugs

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -120,7 +120,7 @@ curseforge {
 				optionalDependency "betterend"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
-				optionalDependency "natures_spirit"
+				optionalDependency "natures-spirit"
 				optionalDependency "create"
 				optionalDependency "ad-astra"
 				optionalDependency "deeperdarker"
@@ -128,7 +128,7 @@ curseforge {
 				optionalDependency "naturalist"
 				optionalDependency "advanced-netherite"
 				optionalDependency "modern-industrialization"
-				optionalDependency "biomeswevegone"
+				optionalDependency "oh-the-biomes-weve-gone"
 				optionalDependency "techreborn"
 				optionalDependency "lets-do-bloomingnature"
 				optionalDependency "lets-do-beachparty"
@@ -171,7 +171,7 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
-		optional.project "natures_spirit"
+		optional.project "natures-spirit"
 		optional.project "create"
 		optional.project "ad-astra"
 		optional.project "betterend"
@@ -179,7 +179,7 @@ modrinth {
 		optional.project "ecologics"
 		optional.project "naturalist"
 		optional.project "advanced-netherite"
-		optional.project "biomeswevegone"
+		optional.project "oh-the-biomes-weve-gone"
 		optional.project "modern-industrialization"
 		optional.project "lets-do-bloomingnature"
 		optional.project "fruitful-fun"
