[Patch]: Corrected compatibility slugs (#1035)

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -120,15 +120,15 @@ curseforge {
 				optionalDependency "betterend"
 				optionalDependency "mystical-crops"
 				optionalDependency "mythicmetals"
-				optionalDependency "natures_spirit"
+				optionalDependency "natures-spirit"
 				optionalDependency "create"
-				optionalDependency "ad_astra"
+				optionalDependency "ad-astra"
 				optionalDependency "deeperdarker"
 				optionalDependency "ecologics"
 				optionalDependency "naturalist"
 				optionalDependency "advanced-netherite"
 				optionalDependency "modern-industrialization"
-				optionalDependency "biomeswevegone"
+				optionalDependency "oh-the-biomes-weve-gone"
 				optionalDependency "techreborn"
 				optionalDependency "lets-do-bloomingnature"
 				optionalDependency "lets-do-beachparty"
@@ -171,15 +171,15 @@ modrinth {
 		optional.project "mystical_crops"
 		optional.project "mythicmetals"
 		optional.project "wiredredstone"
-		optional.project "natures_spirit"
+		optional.project "natures-spirit"
 		optional.project "create"
-		optional.project "ad_astra"
+		optional.project "ad-astra"
 		optional.project "betterend"
 		optional.project "deeperdarker"
 		optional.project "ecologics"
 		optional.project "naturalist"
 		optional.project "advanced-netherite"
-		optional.project "biomeswevegone"
+		optional.project "oh-the-biomes-weve-gone"
 		optional.project "modern-industrialization"
 		optional.project "lets-do-bloomingnature"
 		optional.project "fruitful-fun"
