* Added EMI as a dependency

--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -15,3 +15,4 @@ alloy_forgery_version=2.1.2+1.20
 spruceui_version=4.2.0+1.19.4
 lamb_dynamic_lights_version=2.3.0+1.19.4
 modonomicon_version=1.73.2
+emi_version=1.1.12+1.20.1+fabric
