--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include "fabric:modules"
 include "fabric:modules:bows"
 include "fabric:modules:trade"
 include "fabric:modules:generator"
+include "fabric:modules:smithing"
