[Patch] Added and fixed redundant tags

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -16,7 +16,10 @@
       "beachparty",
       "modern_industrialization",
       "create",
-      "techreborn"
+      "techreborn",
+      "bloomingnature",
+      "ecologics",
+      "meadow"
     ]
   }
 }
