--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 
 	// Advanced Runtime Resource Pack
 	modApi("maven.modrinth:arrp:${project.advanced_runtime_resource_pack_version}")
+
+	modApi("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}"){
+		exclude(group: "net.fabricmc.fabric-loader")
+	}
 }
 
 sourceSets {
