--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -145,6 +145,7 @@ curseforge {
 				optionalDependency "regions_unexplored"
 				optionalDependency "spelunkery"
 				optionalDependency "ends-phantasm"
+				optionalDependency "enderitemod"
 				incompatible "exordium"
 			}
 		}
@@ -201,6 +202,7 @@ modrinth {
 		optional.project "regions_unexplored"
 		optional.project "spelunkery"
 		optional.project "ends-phantasm"
+		optional.project "enderitemod"
 		incompatible.project "exordium"
 	}
 }
