--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -19,7 +19,8 @@
       "techreborn",
       "bloomingnature",
       "ecologics",
-      "meadow"
+      "meadow",
+      "galosphere"
     ]
   }
 }
