--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -20,7 +20,8 @@
       "bloomingnature",
       "ecologics",
       "meadow",
-      "galosphere"
+      "galosphere",
+      "bountifulfares"
     ]
   }
 }
