* Removed and updates mod ids

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -141,14 +141,12 @@ curseforge {
 				optionalDependency "dragonloot"
 				optionalDependency "garnished-additions"
 				optionalDependency "mythicmetals-decorations"
-				optionalDependency "eldritch-end"
-				optionalDependency "regions_unexplored"
+				optionalDependency "regions-unexplored"
 				optionalDependency "spelunkery"
 				optionalDependency "ends-phantasm"
-				optionalDependency "enderitemod"
+				optionalDependency "enderite-mod"
 				optionalDependency "galosphere"
-				optionalDependency "bountiful-fares"
-				optionalDependency "edenring-reforked"
+				optionalDependency "eden-ring-reforked"
 				incompatible "exordium"
 			}
 		}
@@ -202,13 +200,13 @@ modrinth {
 		optional.project "garnished-additions"
 		optional.project "mythicmetals-decorations"
 		optional.project "eldritch-end"
-		optional.project "regions_unexplored"
+		optional.project "regions-unexplored"
 		optional.project "spelunkery"
 		optional.project "ends-phantasm"
-		optional.project "enderitemod"
+		optional.project "enderite-mod"
 		optional.project "galosphere"
 		optional.project "bountiful-fares"
-		optional.project "edenring-reforked"
+		optional.project "eden-ring-reforked"
 		incompatible.project "exordium"
 	}
 }
