--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ allprojects {
 		maven { url = "https://maven.blamejared.com" }
 		maven { url = "https://minecraft.guntram.de/maven/" }
 		maven { url = "https://maven.terraformersmc.com/" }
-		maven { url = "https://maven.wispforest.io/" }
+		// maven { url = "https://maven.wispforest.io/" }
 		maven { url = "https://maven.cafeteria.dev" }
 		maven { url = "https://maven.gegy.dev" }
 		maven { url = "https://maven.kosmx.dev/" }
